kube/green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: green-app
  template:
    metadata:
      labels:
        app: green-app
    spec:
      containers:
        - name: green-app
          image: hashicorp/http-echo
          args:
            - -listen=:8081
            - -text="I am green"
          resources:
            limits:
              memory: "50M"
              cpu: "50m"
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: green-app-svc
spec:
  selector:
    app: green-app
  ports:
    - port: 8081
      targetPort: 8081
