kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-ingress
  labels:
    name: blue-ingress
spec:
  rules:
    - host: # intentionally keep this empty, because working with minikube only
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: blue-app-svc
                port:
                  number: 8080
